apps/clusters/k8s-02/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: prometheus-k8s-passwd
    nginx.ingress.kubernetes.io/auth-realm: Prometheus k8s
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: prometheus02.k8s-02.konturlabs.com
      http:
        paths:
          - backend:
              service:
                name: prometheus-k8s
                port:
                  name: web
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prometheus02.k8s-02.konturlabs.com
      secretName: prometheus02-k8s-02-konturlabs-com-tls
